# Baby-Milk-Price-Logger

./: .gitignore  pyproject.toml  requirements.txt  requirements1.txt  reschedule_next_run.py
.github/workflows/: inspector.yml  scrape-giant-manual.yml  scrape-ntuc-manual.yml  scrape-ov8-manual.yml
scraped-data/sg-giant/: [2022-06-20 12:41:05] sg-giant.csv  [2022-06-21 22:53:39] sg-giant.csv  [2022-06-22 17:44:16] sg-giant.csv  [2022-06-26 16:53:59] sg-giant.csv
scraped-data/sg-ntuc_fairprice/: [2022-06-20 08:34:09] sg-ntuc.csv  [2022-06-21 22:38:56] sg-ntuc.csv  [2022-06-22 16:59:19] sg-ntuc.csv  [2022-06-26 16:35:07] sg-ntuc.csv
scraped-data/sg-shengsiong/: [2022-06-20 21:13:36] sg-ov8.csv  [2022-06-21 23:00:21] sg-ov8.csv  [2022-06-22 22:44:31] sg-ov8.csv
scraper-env/: pyvenv.cfg
scraper-files/: brands-milk.csv  scrapy.cfg
scraper-files/milk/: items.py  middlewares.py  pipelines.py  settings.py
scraper-files/milk/spiders/: sg-giant.py  sg-ntuc.py  sg-ov8.py
